  --> Since this switch required significant changes in Geomega, please verify
      your geometries
+ The MEGAlib default materials have been changed to the new format
  ("XYZ.ComponentByAtoms Si 1") which is based on natural isotope distributions
  in Geant4. Thus the cross sections changed slightly.
+ A compiler with C++11 support is now required - all current Mac and Linux
  compiler should do, e.g. g++ 4.7 and higher and Apple compiler 6.0
  and higher. 
  
  
*** Significant new features & improvements:

General:
+ A compiler with C++11 support is now required - all current Mac and Linux
  compiler should do, e.g. g++ 4.7 and higher and Apple compiler 6.0
  and higher. The setup script will test for the compiler.
+ Capability to change font size for Retina displays
+ Capability to read and write gzip'ed files via zlib library
+ MTimer is now thread reentrant
+ Gnuzillion antique memory leaks fixed
+ New mvalgrind frontend for simplified memory issue debugging

Cosima:
+ Support for Geant4 10.0 (enables meta-stable states, but multi-threading 
  is not yet supported)
+ Support for Geant4 10.1 --- however, you have to add "101" manually to the 
  file config/AllowedGeant4Versions.txt since it has worse performance than 
  10.0
+ For improved activation simulations (and only those!) there are patches
  for Geant4 10.00.p04 and 10.01.p01 in resource/patches
+ New hadron physics list FTFP_BERT_HP
+ Restricted line source
+ dcosima - distributed simulations on multiple machines (see cosima manual for
  instructions)

Sivan:
+ Show start locations

Fretalon:
+ First alpha version of calibration framework
+ First alpha version of Melinator - the MEGAlib line calibrator

Geomega:
+ Switch to ROOT's newer TGeo* geometry front end
+ Addition of boolean shapes generated via intersection, union, and subtraction
+ Exchanged the (slow) ROOT rotations (TMatrix*) in Geomega with new MRotation 
  class
+ The MEGAlib default materials have been changed to the new format