@@ -24,21 +24,25 @@ Version 2.29/2.30
   ("XYZ.ComponentByAtoms Si 1") which is based on natural isotope distributions
   in Geant4. Thus the cross sections changed slightly.
 + A compiler with C++11 support is now required - all current Mac and Linux
-  compiler should do, e.g. g++ 4.7 and higher and Apple compiler 6.0
+  compiler should do, e.g. g++ 4.8 and higher and Apple compiler 6.0
   and higher. 
++ ROOT is now built using cmake instead of its older, error prone configure
+  script
   
   
 *** Significant new features & improvements:
 
 General:
 + A compiler with C++11 support is now required - all current Mac and Linux
-  compiler should do, e.g. g++ 4.7 and higher and Apple compiler 6.0
+  compiler should do, e.g. g++ 4.8 and higher and Apple compiler 6.0
   and higher. The setup script will test for the compiler.
 + Capability to change font size for Retina displays
 + Capability to read and write gzip'ed files via zlib library
 + MTimer is now thread reentrant
 + Gnuzillion antique memory leaks fixed
 + New mvalgrind frontend for simplified memory issue debugging
++ ROOT is now built using cmake instead of its older, error prone configure
+  script
 
 Cosima:
 + Support for Geant4 10.0 (enables meta-stable states, but multi-threading 
